--- a/aula04/trabalho04/styles/styles-noticias.css
+++ b/aula04/trabalho04/styles/styles-noticias.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+h1{
+    margin-top: 5rem;
+    text-align: center;
+}
+
 /* ---- container principal ----  */
 
 div.principal-container{
@@ -14,7 +19,7 @@ div.principal-container{
 
 div.flex-top-container{
     max-width: 1400px;
-    margin: 7rem auto 4rem;
+    margin: 2rem auto 4rem;
 
     display: flex;
     align-items: center;
@@ -30,6 +35,12 @@ div.flex-top-container div{
 div.flex-top-container img{
     width: 100%;
     height: 100%;
+}
+
+div.flex-top-container p{
+    text-align: center;
+    font-size: 1.2rem;
+    margin-top: 0.4rem;
 }
 
 /* ---- container mid (propaganda/bermudas)---- */
@@ -66,27 +77,36 @@ div.ads p{
 /* ---- estilização dos cards ----  */
 
 div.cards{
-    /* border: 1px solid red; */
 
-    max-height: 550px;
+    max-width: 900px;
+    max-height: 600px;
     align-items: center;
 
     display: flex;
     flex-flow: column wrap;
-    flex: 1;
+    flex: 1;    
 }
 
 div.cards div{
     width: 200px;
     height: 150px;
 
-
     margin-bottom: 2rem;
+
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 div.cards img{
     width: 100%;
     height: 100%;
 }
+
+div.cards p{
+    margin-left: 10px;
+    font-weight: 700;
+    
+}
+
+
