--- a/jasvascript/aula09/styles.css
+++ b/jasvascript/aula09/styles.css
@@ -1,22 +1,3 @@
-ul {
-    list-style: none;
-}
-
-li{
-    padding: 1rem;
-    border: 1px solid rgb(187, 187, 187);
-    margin: 1rem auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0.5rem;
-}
-
-li:hover{
-    filter: brightness(0.6);
-    cursor: pointer;
-}
-
 input.search{
     margin-top: 1rem;
     width: 300px;
@@ -28,4 +9,38 @@ input.search{
 input::placeholder{
     font-style: italic;
     padding-left: 2px;
+}
+
+ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+li{
+    padding: .3rem;
+    width: 300px;
+    border: 1px solid rgb(187, 187, 187);
+    margin: 1rem auto;
+    border-radius: 0.5rem;
+}
+
+li:hover{
+    filter: brightness(0.6);
+    cursor: pointer;
+}
+
+ul button{
+    height: 30px;
+    margin: 0 .3rem;
+    padding: .9rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: .3rem;
+}
+
+ul button:hover{
+    filter: brightness(0.9);
 }
