--- a/jasvascript/aula09/styles.css
+++ b/jasvascript/aula09/styles.css
@@ -14,8 +14,15 @@ input::placeholder{
 ul {
     list-style: none;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+ul div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 li{
@@ -29,6 +36,10 @@ li{
 li:hover{
     filter: brightness(0.6);
     cursor: pointer;
+}
+
+.buttons{
+    margin-bottom: 1rem;
 }
 
 ul button{
